[package]
name = "query-the-github-api"
version = "0.1.0"
authors = ["chchang <ookk8282@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version="0.10.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "0.2", features = ["full"] }
url = "2.1"
log = "0.4"
pretty_env_logger = "0.4"
