[package]
name = "query-the-github-api"
version = "0.1.0"
authors = ["chchang <ookk8282@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version="0.10.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "0.2", features = ["full"] }
url = "2.1"
log = "0.4"
pretty_env_logger = "0.4"
skip_error = { version = "1", features = ["log"] }
tar = "0.4"
flate2 = "1.0"
thiserror = "1.0"
zip = "0.5"

[patch.crates-io]
# for ZipArchive::extract() API which is not available at 0.5.8
zip = { git = "https://github.com/zip-rs/zip", rev = "f5061c25e92c8808f27afbc7ea42f0bdc563c9c4" }
